-fixed layout issues and renamed Headers in Holomail

--- a/app/templates/holomail_send.html
+++ b/app/templates/holomail_send.html
@@ -2,7 +2,7 @@
 {% block content %}
 	<link href="{{ url_for("static", filename="css/holomail.css") }}" rel="stylesheet">
 	<section class="header">
-		<h1>Holopost</h1>
+		<h1>Holopost Schreiben</h1>
 	</section>
 	{% include "flash.html" %}
 	<section>
