--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -17,11 +17,11 @@
 				<a href="{{ url_for("logout") }}">Logout</a>
 			</div>
 			<div class="inline">
-				<a href="{{ url_for("holopost") }}">
+				<a href="{{ url_for("holopost") }}" style="text-decoration: none">
 					{% if g.user.all_mails_read() %}
-						<img class="mailimage" src="{{ url_for("static", filename="images/HolomailGelesen.png") }}" style="text-decoration: none">
+						<img class="mailimage" src="{{ url_for("static", filename="images/HolomailGelesen.png") }}">
 					{% else %}
-						<img class="mailimage" src="{{ url_for("static", filename="images/HolomailNeu.png") }}" style="text-decoration: none">
+						<img class="mailimage" src="{{ url_for("static", filename="images/HolomailNeu.png") }}">
 					{% endif %}
 				</a>&nbsp
 				<a href="{{ url_for("holopost") }}">Holopost</a>
