Fix hidden preview

--- a/app/templates/holomail_send.html
+++ b/app/templates/holomail_send.html
@@ -38,7 +38,7 @@
 						Nachricht:
 					</div>
 					<div class="fith-right">
-						{{ form.body(rows=10, class="smalltext wide") }}
+						{{ form.body(rows=10, class="smalltext wide", only_input=True) }}
 					</div>
 				</div>       
         <div>
