--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -30,8 +30,12 @@
 					Wiederholung:
 				</div>
 				<div class="third-right">
-					{{ form.password_rep(class="entry") }}<br>
-					<input value="Registrieren" type="submit">
+					{{ form.password_rep(class="entry") }}
+				</div>
+				<div class="third-right">
+					<div class="without-left">
+						<input value="Registrieren" type="submit">
+					</div>
 				</div>
 			</div>
         </form>
