--- a/app/static/css/splitlayout.css
+++ b/app/static/css/splitlayout.css
@@ -1,7 +1,6 @@
 .half-left{
 	float: left;
 	width: 50%;
-	margin-top: 1em;
 	margin-left: 1em;
 	margin-right: 1em;
 }
@@ -9,7 +8,6 @@
 .half-right{
 	margin-left: 50%;
 	width: 50%;
-	margin-top: 1em;
 	margin-right: 1em;
 }
 
@@ -21,8 +19,8 @@
 }
 
 .third-right{
-	margin-left: 35%;
-	width: 65%;
+	margin-left: 33%;
+	width: 67%;
 	margin-right: 1em;
 }
 
@@ -75,4 +73,8 @@
 
 .after-float-both{
 	clear:both;
+}
+
+.without-left{
+	margin-left:2em;
 }
