--- a/app/templates/holomail_send.html
+++ b/app/templates/holomail_send.html
@@ -38,22 +38,22 @@
 						Nachricht:
 					</div>
 					<div class="fith-right">
-						{{ form.body(rows=10, class="smalltext wide", only_input=True) }}
+						{{ form.body(rows=10, cols=40, only_input=True) }}
 					</div>
 				</div>       
-        <div>
-          <div class="fith-right smalltext" id="preview" style="display:none;">
-            {{ form.body(only_preview=True) }}
-          </div>
-        </div>
-				<div>
-					<div class="fith-right">
-            <script>
-                function showhide(id) {
-                var e = document.getElementById(id);
-                e.style.display = (e.style.display == 'block') ? 'none' : 'block';
-             }
-             </script>
+				<div class="fith-right">
+				  <div class="without-left" id="preview" style="display:none;">
+					{{ form.body(only_preview=True) }}
+				  </div>
+				</div>
+				<div class="fith-right">
+					<div class="without-left">
+						<script>
+							function showhide(id) {
+							var e = document.getElementById(id);
+							e.style.display = (e.style.display == 'block') ? 'none' : 'block';
+						 }
+						 </script>
 						{{ form.submit }}<input type="button" value="Vorschau" onclick="showhide('preview')">
 					</div>
 				</div>
