changed name from allianz to alliance

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -14,10 +14,10 @@
 		</div>
 		{% if g.user.is_authenticated %}
 			<div class="inline">
-			    <a href="{{ url_for("allianz") }}">Allianz</a>
+			    <a href="{{ url_for("alliance") }}">Allianz</a>
 			</div>
 			<div class="inline">
-			    <a href="{{ url_for("allianz_new") }}">Allianz&nbsperstellen</a>
+			    <a href="{{ url_for("alliance_new") }}">Allianz&nbsperstellen</a>
 			</div>
 			<div class="inline">
 				<a href="{{ url_for("logout") }}">Logout</a>
