improved layout of base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,9 @@
 
 	<body class="screenwidth">
 		{% include "menu.html" %}
+		{% block header %}
+		{% endblock %}
+	    {% include "flash.html" %}
 		{% block content %}
 		{% endblock %}
 	</body>
