--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
+{% block header %}
+{% endblock %}
 {% block content %}
-	{% include "flash.html" %}
 	<section class="header">
 		<h1>VERBOTEN!</h1>
 	</section>
