--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
-{% block content %}
+{% block header %}
 	<section class="text-center">
 		<img src="static/images/cooltext2.png"/>
 	</section>
-	{% include "flash.html" %}
+{% endblock %}
+{% block content %}
 	<section class="border">
 		<form class="half-left div" method="post" name="login">
 			{{ form.hidden_tag() }}
