--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -7,7 +7,7 @@
                     {% if field.type == "SubmitField" %}
                         &nbsp;
                     {% else %}
-                        {{ field.label }}
+                        {{ field.label }}:
                     {% endif %}
                 </div>
                 <div class="quarter-right">
