--- a/app/static/css/chat.css
+++ b/app/static/css/chat.css
@@ -4,6 +4,11 @@
   right: 0;
   min-height: 30px;
   min-width: 100px;
-  max-height: 300px;
+  max-height: 400px;
   max-width: 400px;
+}
+
+.messages{
+  overflow:auto;
+  max-height: 350px;
 }
