--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -2,22 +2,18 @@
 <div class="chat-window">
     <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+    <script type="text/javascript" charset="utf-8">function updateScroll(){var element = document.getElementById("log");element.scrollTop = element.scrollHeight;}</script>
     <script type="text/javascript" charset="utf-8">
-        $(document).ready(function() {
-            namespace="/chatspace";
-            var socket = io.connect(location.protocol + "//" + document.domain + ":" + location.port + namespace);
-            socket.on("connect", function() {socket.emit('my_event', {data: "I\'m connected!"});});
-            socket.on("my_response", function(msg) {$("#log").append("<br>" + $("<div/>").text("Received #" + msg.count + ": " + msg.data).html());});
-            var ping_pong_times = [];
-            var start_time;
-            window.setInterval(function() {start_time = (new Date).getTime(); socket.emit("my_ping");}, 1000);
-            socket.on("my_pong", function() {var latency = (new Date).getTime() - start_time; ping_pong_times.push(latency); ping_pong_times = ping_pong_times.slice(-30); var sum = 0; for (var i = 0; i < ping_pong_times.length; i++) sum += ping_pong_times[i]; $("#ping-pong").text(Math.round(10*sum/ping_pong_times.length)/10);});
-            $("form#emit").submit(function(event) {socket.emit("my_event", {data: $("#emit_data").val()}); return false;});
-            $("form#broadcast").submit(function(event) {socket.emit("my_broadcast_event", {data: $("#broadcast_data").val()}); return false;});
-            $("form#join").submit(function(event) {socket.emit("join", {room: $("#join_room").val()}); return false;});
-            $("form#leave").submit(function(event) {socket.emit("leave", {room: $("#leave_room").val()}); return false;});
-            $("form#send_room").submit(function(event) {socket.emit("my_room_event", {room: $("#room_name").val(), data: $("#room_data").val()}); return false;});
-            $("form#close").submit(function(event) {socket.emit("close_room", {room: $("#close_room").val()}); return false;});
-            $("form#disconnect").submit(function(event) {socket.emit("disconnect_request"); return false;});
-            }
+        $(document).ready(function(){
+            var socket = io.connect('http://' + document.domain + ':' + "5001" + '/test');
+            socket.on('ServerResponse', function(msg) {$('#log').append('<p>' + msg.user + ': ' + msg.data + '</p>');var element = document.getElementById("log");element.scrollTop = element.scrollHeight;});
+            $('form#broadcast').submit(function(event) {socket.emit('ClientBroadcast', {data: $(('#broadcast_data')).val(), user: '{{ g.user.username }}'});return false;});
+});
+    </script>
+    <script type="text/javascript" charset="utf-8">function updateScroll(){var element = document.getElementById("log");element.scrollTop = element.scrollHeight;}</script>
+    <div class="messages" id="log"></div>
+    <form id="broadcast" method="POST" action='#'>
+        <input type="text" name="broadcast_data" id="broadcast_data" placeholder="Message">
+        <input type="submit" value="Senden">
+    </form>
 </div>
