--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -2,15 +2,28 @@
 <div class="chat-window">
     <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
-    <script type="text/javascript" charset="utf-8">function updateScroll(){var element = document.getElementById("log");element.scrollTop = element.scrollHeight;}</script>
     <script type="text/javascript" charset="utf-8">
         $(document).ready(function(){
             var socket = io.connect('http://' + document.domain + ':' + "5001" + '/test');
-            socket.on('ServerResponse', function(msg) {$('#log').append('<p>' + msg.user + ': ' + msg.data + '</p>');var element = document.getElementById("log");element.scrollTop = element.scrollHeight;});
-            $('form#broadcast').submit(function(event) {socket.emit('ClientBroadcast', {data: $(('#broadcast_data')).val(), user: '{{ g.user.username }}'});return false;});
+            socket.on('ServerResponse',
+                function(msg) {
+                    if (msg.user!="Server" || msg.data!="Connected")
+                        {($('#log').append('<p>' + msg.user + ': ' + msg.data + '</p>'))};
+                    var element = document.getElementById("log");
+                    element.scrollTop = element.scrollHeight;
+                });
+            $('form#broadcast').submit(
+                function(event) {
+                    socket.emit('ClientBroadcast', {data: $('#broadcast_data').val(), user: '{{ g.user.username }}'});
+                    return false;
+                }
+            );
 });
     </script>
-    <script type="text/javascript" charset="utf-8">function updateScroll(){var element = document.getElementById("log");element.scrollTop = element.scrollHeight;}</script>
+    <script type="text/javascript" charset="utf-8">
+        window.onbeforeunload = function() {sessionStorage.setItem("chatlog", $('#log').html());}
+        window.onload = function(){var chatlog = sessionStorage.getItem("chatlog");$('#log').html(chatlog);}
+    </script>
     <div class="messages" id="log"></div>
     <form id="broadcast" method="POST" action='#'>
         <input type="text" name="broadcast_data" id="broadcast_data" placeholder="Message">
