--- a/app/templates/alliance_detail.html
+++ b/app/templates/alliance_detail.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
-{% block content %}
+{% block header %}
 	<link href="{{ url_for("static", filename="css/holomail.css") }}" rel="stylesheet">
     <section class="header">
         <h1>Allianz</h1>
     </section>
-	{% include "flash.html" %}
+{% endblock %}
+{% block content %}
 	<section class="border">
 		<div class="div">
 			<div>
