port is again 5000 and there is now a clear chat button

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -17,6 +17,9 @@
 				<a href="{{ url_for("logout") }}">Logout</a>
 			</div>
 			<div class="inline">
+				<a href="{{ url_for("chat") }}">Chat</a>
+			</div>
+			<div class="inline">
 				<a href="{{ url_for("holopost") }}" style="text-decoration: none">
 					{% if g.user.all_mails_read() %}
 						<img class="mailimage" src="{{ url_for("static", filename="images/HolomailGelesen.png") }}">
