--- a/app/static/css/chat.css
+++ b/app/static/css/chat.css
@@ -5,11 +5,20 @@
   min-height: 30px;
   min-width: 100px;
   max-height: 400px;
-  max-width: 400px;
-  background-color: #2C2C2C;
+  max-width: 500px;
+  background-color: #111111;
+  opacity: 0.75;
 }
 
 .messages{
-  overflow:auto;
-  max-height: 350px;
+  overflow: auto;
+  max-height: 280px;
+}
+
+.toolbox{
+  float: right;
+}
+
+.toolbutton{
+  display: inline-block;
 }
