--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -1,46 +1,89 @@
-<link href="{{ url_for("static", filename="css/chat.css") }}" rel="stylesheet">
-<div class="chat-window">
+{% if g.user.is_authenticated %}
     {% if g.user.wants_chat() %}
-        <div class="div">
-            <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
-            <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
-            <script type="text/javascript" charset="utf-8">
-                $(document).ready(function(){
-                    var socket = io.connect('http://' + document.domain + ':' + "5001" + '/test');
-                    socket.on('ServerResponse',
-                        function(msg) {
-                            if (msg.user!="Server" || msg.data!="Connected")
-                                {($('#log').append('<p>' + msg.user + ': ' + msg.data + '</p>'))};
-                            var element = document.getElementById("log");
-                            element.scrollTop = element.scrollHeight;
-                        });
-                    $('form#broadcast').submit(
-                        function(event) {
-                            socket.emit('ClientBroadcast', {data: $('#broadcast_data').val(), user: '{{ g.user.username }}'});
-                            return false;
+        <link href="{{ url_for("static", filename="css/chat.css") }}" rel="stylesheet">
+        <div class="chat-window">
+            <div class="div">
+                <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
+                <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+                <script type="text/javascript" charset="utf-8">
+                    $(document).ready(function(){
+                        function hide(){
+                            $('#log').hide();
+                            $('#clear').hide();
+                            $('#broadcast').hide();
                         }
-                    );
-                    $('form#clear').submit(
-                        function(){
-                            sessionStorage.setItem('chatlog', '');
-                            $('#log').html('');
+                        function show(){
+                            $('#log').show();
+                            $('#clear').show();
+                            $('#broadcast').show();
                         }
-                    );
-        });
-            </script>
-            <script type="text/javascript" charset="utf-8">
-                window.onbeforeunload = function() {sessionStorage.setItem("chatlog", $('#log').html());}
-                window.onload = function(){var chatlog = sessionStorage.getItem("chatlog");$('#log').html(chatlog);}
-            </script>
-            <form id="clear" method="GET" action='#'>
-                <input type="submit" value="Leeren">
-            </form>
-            <div class="messages" id="log"></div>
-            <form id="broadcast" method="POST" action='#'>
-                <input type="text" name="broadcast_data" id="broadcast_data" placeholder="Message">
-                <input type="submit" value="Senden">
-            </form>
+                        var first = sessionStorage.getItem("chatmin");
+                        if (first=='null') sessionStorage.setItem("chatmin", 1);
+                        if (first=='1') {
+                            hide();
+                        }
+                        if (first=='0') {
+                            show();
+                        }
+                        var socket = io.connect('http://' + document.domain + ':' + "5001" + '/test');
+                        socket.on('ServerResponse',
+                            function(msg) {
+                                if (msg.user!="Server" || msg.data!="Connected")
+                                    {($('#log').append('<p>' + msg.user + ': ' + msg.data + '<br><h9 align="right">' + msg.date + '</h9></p>'))};
+                                var element = document.getElementById("log");
+                                element.scrollTop = element.scrollHeight;
+                            });
+                        $('form#broadcast').submit(
+                            function(event) {
+                                socket.emit('ClientBroadcast', {
+                                    data: $('#broadcast_data').val(),
+                                    user: '{{ g.user.username }}',
+                                    date: new Date().toLocaleString('de-DE')
+                                });
+                                return false;
+                            }
+                        );
+                        $('form#clear').submit(
+                            function(){
+                                sessionStorage.setItem('chatlog', '');
+                                $('#log').html('');
+                            }
+                        );
+                        $('form#minimize').submit(
+                            function(){
+                                sessionStorage.setItem('chatmin', '1');
+                                hide();
+                            }
+                        );
+                        $('form#maximize').submit(
+                            function(){
+                                sessionStorage.setItem('chatmin', '0');
+                                show();
+                            }
+                        );
+            });
+                </script>
+                <script type="text/javascript" charset="utf-8">
+                    window.onbeforeunload = function() {sessionStorage.setItem("chatlog", $('#log').html());}
+                    window.onload = function(){var chatlog = sessionStorage.getItem("chatlog");$('#log').html(chatlog);}
+                </script>
+                <div class="toolbox">
+                    <form id="maximize" method="GET" action='#' class="toolbutton">
+                        <input type="image" name="maximize" src="/static/images/maximize.png" border="0" alt="a" />
+                    </form>
+                    <form id="minimize" method="GET" action='#' class="toolbutton">
+                        <input type="image" name="minimize" src="/static/images/minimize.png" border="0" alt="a" />
+                    </form>
+                </div>
+                <form id="clear" method="GET" action='#'>
+                    <input type="submit" value="Leeren">
+                </form>
+                <div class="messages" id="log"></div>
+                <form id="broadcast" method="POST" action='#'>
+                    <input type="text" name="broadcast_data" id="broadcast_data" placeholder="Message">
+                    <input type="submit" value="Senden">
+                </form>
+            </div>
         </div>
-    {% else %}
     {% endif %}
-</div>
+{% endif %}
