--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -6,6 +6,7 @@
                 <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
                 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
                 <script type="text/javascript" charset="utf-8">
+                    var chatroom;
                     $(document).ready(function(){
                         function hide(){
                             $('#log').hide();
@@ -17,29 +18,72 @@
                             $('#clear').show();
                             $('#broadcast').show();
                         }
-                        var first = sessionStorage.getItem("chatmin");
-                        if (first=='null') sessionStorage.setItem("chatmin", 1);
-                        if (first=='1') {
+                        function roomhide(){
+                            $('#changeroom').hide();
+                        }
+                        function roomshow(){
+                            $('#changeroom').show();
+                        }
+                        var chatmin = sessionStorage.getItem("chatmin");
+                        if (chatmin=='null') sessionStorage.setItem("chatmin", 0);
+                        if (chatmin=='1') {
                             hide();
                         }
-                        if (first=='0') {
+                        if (chatmin=='0') {
                             show();
                         }
-                        var socket = io.connect('http://' + document.domain + ':' + "5001" + '/test');
+                        var viewchangeroom = sessionStorage.getItem("viewchangeroom");
+                        if (viewchangeroom=='null') {
+                            sessionStorage.setItem("viewchangeroom", 1);
+                            roomhide();
+                        }
+                        if (viewchangeroom=='1') {
+                            roomhide();
+                        }
+                        if (viewchangeroom=='0') {
+                            roomshow();
+                        }
+                        chatroom = sessionStorage.getItem("chatroom");
+                        if (chatroom=='null' || chatroom=='' || chatroom==null) {
+                            chatroom="main";
+                            sessionStorage.setItem("chatroom", chatroom);
+                        }
+                        var socket = io.connect('http://' + document.domain + ':' + "5001" + '/chat');
+                        socket.emit('join', {
+                            room: chatroom,
+                            user: '{{ g.user.username }}',
+                            date: new Date().toLocaleString('de-DE')
+                        });
                         socket.on('ServerResponse',
                             function(msg) {
-                                if (msg.user!="Server" || msg.data!="Connected")
-                                    {($('#log').append('<p>' + msg.user + ': ' + msg.data + '<br><h9 align="right">' + msg.date + '</h9></p>'))};
+                                if (msg.user!="Server")
+                                    {($('#log').append('<p>' + msg.user + ': ' + msg.data + '<br><h9 align="right">' + msg.date + ' - Raum:"' + msg.raum + '"</h9></p>'))};
                                 var element = document.getElementById("log");
                                 element.scrollTop = element.scrollHeight;
                             });
                         $('form#broadcast').submit(
                             function(event) {
-                                socket.emit('ClientBroadcast', {
+                                socket.emit('RoomBroadcast', {
                                     data: $('#broadcast_data').val(),
+                                    user: '{{ g.user.username }}',
+                                    date: new Date().toLocaleString('de-DE'),
+                                    room: chatroom
+                                });
+                                return false;
+                            }
+                        );
+                        $('form#changeroom').submit(
+                            function(event) {
+                                socket.emit('join', {
+                                    room: $('#changeroom_data').val(),
                                     user: '{{ g.user.username }}',
                                     date: new Date().toLocaleString('de-DE')
                                 });
+                                chatroom = $('#changeroom_data').val();
+                                sessionStorage.setItem("chatroom", chatroom);
+                                sessionStorage.setItem('viewchangeroom', '1');
+                                roomhide();
+                                window.location.reload();
                                 return false;
                             }
                         );
@@ -47,6 +91,12 @@
                             function(){
                                 sessionStorage.setItem('chatlog', '');
                                 $('#log').html('');
+                            }
+                        );
+                        $('form#change_room').submit(
+                            function(){
+                                sessionStorage.setItem('viewchangeroom', '0');
+                                roomshow();
                             }
                         );
                         $('form#minimize').submit(
@@ -64,10 +114,21 @@
             });
                 </script>
                 <script type="text/javascript" charset="utf-8">
-                    window.onbeforeunload = function() {sessionStorage.setItem("chatlog", $('#log').html());}
-                    window.onload = function(){var chatlog = sessionStorage.getItem("chatlog");$('#log').html(chatlog);}
+                    window.onbeforeunload = function() {
+                        sessionStorage.setItem("chatlog", $('#log').html());
+                    }
+                    window.onload = function(){
+                        var chatlog = sessionStorage.getItem("chatlog");
+                        $('#log').html(chatlog);
+                    }
                 </script>
                 <div class="toolbox">
+                    <form id="clear" method="GET" action='#' class="toolbutton">
+                        <input type="image" name="clear" src="/static/images/clear.png" border="0" alt="a" />
+                    </form>
+                    <form id="change_room" method="GET" action='#' class="toolbutton">
+                        <input type="image" name="change_room" src="/static/images/change_room.png" border="0" alt="a" />
+                    </form>
                     <form id="maximize" method="GET" action='#' class="toolbutton">
                         <input type="image" name="maximize" src="/static/images/maximize.png" border="0" alt="a" />
                     </form>
@@ -75,12 +136,13 @@
                         <input type="image" name="minimize" src="/static/images/minimize.png" border="0" alt="a" />
                     </form>
                 </div>
-                <form id="clear" method="GET" action='#'>
-                    <input type="submit" value="Leeren">
+                <form id="changeroom" method="POST" action='#'>
+                    <input type="text" name="changeroom_data" id="changeroom_data" placeholder="Raumname">
+                    <input type="submit" value="Wechseln">
                 </form>
                 <div class="messages" id="log"></div>
                 <form id="broadcast" method="POST" action='#'>
-                    <input type="text" name="broadcast_data" id="broadcast_data" placeholder="Message">
+                    <input type="text" name="broadcast_data" id="broadcast_data" placeholder="Nachricht">
                     <input type="submit" value="Senden">
                 </form>
             </div>
