changed from 2 flask apps to 1

--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -48,7 +48,7 @@
                             chatroom="main";
                             sessionStorage.setItem("chatroom", chatroom);
                         }
-                        var socket = io.connect('http://' + document.domain + ':' + "5001" + '/chat');
+                        var socket = io.connect('http://' + document.domain + ':' + location.port + '/chat');
                         socket.emit('join', {
                             room: chatroom,
                             user: '{{ g.user.username }}',
