--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -5,114 +5,7 @@
             <div class="div">
                 <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
                 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
-                <script type="text/javascript" charset="utf-8">
-                    var chatroom;
-                    $(document).ready(function(){
-                        function hide(){
-                            $('#log').hide();
-                            $('#clear').hide();
-                            $('#broadcast').hide();
-                        }
-                        function show(){
-                            $('#log').show();
-                            $('#clear').show();
-                            $('#broadcast').show();
-                        }
-                        function roomhide(){
-                            $('#changeroom').hide();
-                        }
-                        function roomshow(){
-                            $('#changeroom').show();
-                        }
-                        var chatmin = sessionStorage.getItem("chatmin");
-                        if (chatmin=='null') sessionStorage.setItem("chatmin", 0);
-                        if (chatmin=='1') {
-                            hide();
-                        }
-                        if (chatmin=='0') {
-                            show();
-                        }
-                        var viewchangeroom = sessionStorage.getItem("viewchangeroom");
-                        if (viewchangeroom=='null') {
-                            sessionStorage.setItem("viewchangeroom", 1);
-                            roomhide();
-                        }
-                        if (viewchangeroom=='1') {
-                            roomhide();
-                        }
-                        if (viewchangeroom=='0') {
-                            roomshow();
-                        }
-                        chatroom = sessionStorage.getItem("chatroom");
-                        if (chatroom=='null' || chatroom=='' || chatroom==null) {
-                            chatroom="main";
-                            sessionStorage.setItem("chatroom", chatroom);
-                        }
-                        var socket = io.connect('http://' + document.domain + ':' + location.port + '/chat');
-                        socket.emit('join', {
-                            room: chatroom,
-                            user: '{{ g.user.username }}',
-                            date: new Date().toLocaleString('de-DE')
-                        });
-                        socket.on('ServerResponse',
-                            function(msg) {
-                                if (msg.user!="Server")
-                                    {($('#log').append('<p>' + msg.user + ': ' + msg.data + '<br><h9 align="right">' + msg.date + ' - Raum:"' + msg.raum + '"</h9></p>'))};
-                                var element = document.getElementById("log");
-                                element.scrollTop = element.scrollHeight;
-                            });
-                        $('form#broadcast').submit(
-                            function(event) {
-                                socket.emit('RoomBroadcast', {
-                                    data: $('#broadcast_data').val(),
-                                    user: '{{ g.user.username }}',
-                                    date: new Date().toLocaleString('de-DE'),
-                                    room: chatroom
-                                });
-                                return false;
-                            }
-                        );
-                        $('form#changeroom').submit(
-                            function(event) {
-                                socket.emit('join', {
-                                    room: $('#changeroom_data').val(),
-                                    user: '{{ g.user.username }}',
-                                    date: new Date().toLocaleString('de-DE')
-                                });
-                                chatroom = $('#changeroom_data').val();
-                                sessionStorage.setItem("chatroom", chatroom);
-                                sessionStorage.setItem('viewchangeroom', '1');
-                                roomhide();
-                                window.location.reload();
-                                return false;
-                            }
-                        );
-                        $('form#clear').submit(
-                            function(){
-                                sessionStorage.setItem('chatlog', '');
-                                $('#log').html('');
-                            }
-                        );
-                        $('form#change_room').submit(
-                            function(){
-                                sessionStorage.setItem('viewchangeroom', '0');
-                                roomshow();
-                            }
-                        );
-                        $('form#minimize').submit(
-                            function(){
-                                sessionStorage.setItem('chatmin', '1');
-                                hide();
-                            }
-                        );
-                        $('form#maximize').submit(
-                            function(){
-                                sessionStorage.setItem('chatmin', '0');
-                                show();
-                            }
-                        );
-            });
-                </script>
+                <script type="text/javascript" src="static/js/chat.js"></script>
                 <script type="text/javascript" charset="utf-8">
                     window.onbeforeunload = function() {
                         sessionStorage.setItem("chatlog", $('#log').html());
@@ -120,6 +13,9 @@
                     window.onload = function(){
                         var chatlog = sessionStorage.getItem("chatlog");
                         $('#log').html(chatlog);
+                    }
+                    function getusername() {
+                        return '{{ g.user.username }}';
                     }
                 </script>
                 <div class="toolbox">
@@ -140,6 +36,7 @@
                     <input type="text" name="changeroom_data" id="changeroom_data" placeholder="Raumname">
                     <input type="submit" value="Wechseln">
                 </form>
+                <div id="roomdiv">Raum: </div>
                 <div class="messages" id="log"></div>
                 <form id="broadcast" method="POST" action='#'>
                     <input type="text" name="broadcast_data" id="broadcast_data" placeholder="Nachricht">
