--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,22 +1,131 @@
-{% extends "base.html" %}
-{% block header %}
-    <section class="text-center">
-        <h1>Registrierung</h1>
-    </section>
-{% endblock %}
-{% block content %}
-    <section class="border">
-        <div class="half-left">
-            {% include "form.html" %}
-        </div>
-        <div class="half-right">
-            <p id="dw_desc">Destyny War ist ein Browsergame, das in der Zukunft
-                spielt. Jeder Spieler ist Besitzer eines Planeten, mit dessen Hilfe er das Universum
-                beherschen kann.<br></p>
-        </div>
-    </section>
-    <section class="text-center">
-        Du hast schon einen Benutzernamen? Melde dich einfach auf der <a href="{{ url_for("login") }}">Startseite</a>
-        an.
-    </section>
-{% endblock %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+    <title>Destyny War</title>
+    <link rel="shortcut icon" href="{{ url_for("static", filename="images/logo.jpg") }}"/>
+    <style type="text/css">
+        body {
+            font-family: Arial;
+            background-color: rgb(0, 0, 0);
+            color: rgb(255, 255, 255);
+            background: #2C2C2C url({{ url_for("static", filename="images/star_start.png") }}) repeat;
+        }
+
+        .background_layer {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            width: 100%;
+            height: 652px;
+            background: transparent url({{ url_for("static", filename="images/starbg.png") }}) no-repeat top center;
+        }
+
+        .tp {
+            opacity: 0.700;
+            border-style: solid;
+            border-width: 1px;
+            border-color: #00FF00;
+            background-color: #111;
+        }
+
+        .col > td {
+        }
+
+        * {
+            font-size: 5mm;
+        }
+
+        h1 {
+            font-size: 20mm;
+        }
+
+        h2 {
+            font-size: 9mm;
+        }
+
+        h3 {
+            font-size: 8mm;
+        }
+
+        h4 {
+            font-size: 7mm;
+        }
+
+        h5 {
+            font-size: 6mm;
+        }
+
+        h6 {
+            font-size: 5mm;
+        }
+
+        a:link {
+            color: #FFFFEE;
+        }
+
+        a:visited {
+            color: #FFFFEE;
+        }
+
+        a:active {
+            color: #FFFFEE;
+        }
+
+        .kasten {
+            border: 3px inset rgb(0, 0, 0);
+        }
+
+        .brett {
+            border: 3px outset rgb(0, 0, 0);
+        }
+    </style>
+</head>
+<body>
+<center>
+    <table border="0" cellpadding="5" cellspacing="10" class="main">
+        {% include "mainpageheader.html" %}
+        <tr>
+            <td class="tp" style="text-align:center;"><h1>Registrierung</h1></td>
+        </tr>
+        <td class="tp">
+            <form target="_top" method="post" name="register"><br>
+                {{ form.hidden_tag() }}
+                <table border="0" cellpadding="0" cellspacing="0">
+                    <tbody>
+                    <tr>
+                        <td>&nbsp;&nbsp;&nbsp;Benutzername:</td>
+                        <td>{{ form.username(maxlength=40, size=20) }}&nbsp;&nbsp;
+                        </td>
+                        <td><b style="color:#FF0000;">{{ form.username.errors[0] }}</b></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;&nbsp;&nbsp;Passwort:</td>
+                        <td>{{ form.password(maxlength=30, size=20) }}&nbsp;&nbsp;</td>
+                        <td><b style="color:#FF0000;">{{ form.password.errors[0] }}</b></td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;&nbsp;&nbsp;Passwortwiederholung:&nbsp;&nbsp;</td>
+                        <td>{{ form.password_rep(maxlength=30, size=20) }}&nbsp;&nbsp;</td>
+                        <td><b style="color:#FF0000;">{{ form.password_rep.errors[0] }}</b></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>{{ form.submit(value="Registrieren") }}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </form>
+        </td>
+        </tr>
+        <tr>
+            <td class="tp">
+                Du hast schon einen Benutzernamen? Melde dich einfach auf der <a href="{{ url_for("login") }}">Startseite</a> an.
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</center>
+<br>
+</body>
+</html>
