--- a/app/templates/drawheader.html
+++ b/app/templates/drawheader.html
@@ -207,7 +207,7 @@
                 <center>
                     <a href="{{ url_for("logout") }}">Logout</a>&nbsp;
                     <a href="karte.php">Karte</a>&nbsp;
-                    <a href="planet.php?id=1">Planet</a>&nbsp;
+                    <a href={{ url_for("planet_overview") }}>Planet</a>&nbsp;
                     <a href="planetsoverview.php">eigene&nbsp;Planeten</a>&nbsp;
                     <a href="rang.php">Rangliste(0&nbsp;Punkte)</a>&nbsp;
                     (<a href="allianz_forum.php">neu</a>)
