--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,14 +1,4 @@
-{% extends "base.html" %}
-{% block header %}
-{% endblock %}
-{% block content %}
-	<section class="header">
-		<h1>Seite nicht gefunden!</h1>
-	</section>
-	<section class="border">
-		<div class="div">
-			<p>Diese Seite ist nicht vorhanden.</p>
-			<a href="{{ url_for("index") }}">Weg von hier!</a>
-		</div>
-	</section>
-{% endblock %}
+<h1>Seite nicht gefunden!</h1>
+
+<p>Diese Seite ist nicht vorhanden.</p>
+<a href="{{ url_for("holopost") }}">Weg von hier!</a>
