fixed some minor header bugs

--- a/app/templates/drawheader.html
+++ b/app/templates/drawheader.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Destyny War - Planetenname</title>
-    <link rel="shortcut icon" href="{{ url_for("static", filename="logo.jpg") }}"/>
+    <link rel="shortcut icon" href="{{ url_for("static", filename="images/logo.jpg") }}"/>
     <style type="text/css">
         body {
             font-family: Arial;
@@ -209,7 +209,7 @@
                     <a href="karte.php">Karte</a>&nbsp;
                     <a href={{ url_for("planet_overview") }}>Planet</a>&nbsp;
                     <a href="planetsoverview.php">eigene&nbsp;Planeten</a>&nbsp;
-                    <a href="rang.php">Rangliste(0&nbsp;Punkte)</a>&nbsp;
+                    <a href="rang.php">Rangliste(1.|0&nbsp;Punkte)</a>&nbsp;
                     (<a href="allianz_forum.php">neu</a>)
                     <a href="allianz.php">Allianz</a>&nbsp;
                     <a href="holoberichte.php">Holoberichte</a>&nbsp;
